tests/010_if.out
tests/010_if.pan:24:1-3: error:
  • Unable to validate verification condition for f8
tests/010_if.pan:27:1-3: error:
  • Unable to validate verification condition for f9
tests/010_if.pan:30:1-3: error:
  • Unable to validate verification condition for f10
tests/010_if.pan:33:1-3: error:
  • Unable to validate verification condition for f11
f0 : ℤ
f1 : ℤ
f2 : ℤ
f3 : ℤ
f4 : {n:ℤ | n = 1}
f5 : {n:ℤ | n = 2}
f6 : {n:ℤ | n = 1}
f7 : {n:ℤ | n = 2}